test/semantic_errors/invalid_assignment6.mc
void main() {
    bool b;
    char c;
    b = c; /* cannot assign char to bool */
}